[project]
name = "llmgate"
version = "0.2.0"
description = "Lightweight, provider-agnostic LLM calling library — OpenAI, Gemini, Anthropic, Groq, Mistral, Cohere, Azure, Bedrock, Ollama"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "openai", "gemini", "anthropic", "groq", "mistral", "cohere", "azure", "bedrock", "ollama", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "openai>=1.0",
  "google-genai>=1.0",
  "anthropic>=0.25",
  "groq>=0.9",
  "pydantic>=2.0",
  "httpx>=0.27",
  "typing_extensions>=4.9",
  "google-genai>=1.68.0",
]

[project.optional-dependencies]
mistral = ["mistralai>=1.0"]
cohere  = ["cohere>=5.0"]
bedrock = ["boto3>=1.34"]
ollama  = ["ollama>=0.4"]
# azure uses existing openai dep — no extra install needed
azure   = []
all     = ["mistralai>=1.0", "cohere>=5.0", "boto3>=1.34", "ollama>=0.4"]
dev     = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "twine>=5.0"]

[project.urls]
Homepage = "https://github.com/aaloosamosa/llm-gate"
Repository = "https://github.com/aaloosamosa/llm-gate"
"Bug Tracker" = "https://github.com/aaloosamosa/llm-gate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmgate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.15.7",
  "twine>=5.0",
]
